# parameter-golf

./: .codex_last_feature_ablation_dir  .gitignore  AGENTS.md  EXPERIMENTS.md  ISSUES.md  README.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  autoresearch.sh.bak  cool-implementations.py  curr_record_sub.py  curre_cord_sub_3.py  current_record_sub2.py  dropout_add_norm_standalone.py  final_model.int8.ptz  fineweb_smoke_train.py  meaningless-change.txt  pyproject.toml  rope-bench.py  run_wrap.sh  scratch_softmax_bench.py  scratch_softmax_quick_bench.py  train_gpt.py  train_gpt_parcae.py
.codex/: learning.md
RWKV-LM-V7/: .gitignore  EXPERIMENTS.md  README.md  README_CN.md  agents.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  demo-training-run-fineweb.sh  eval_fineweb_bpb.py  requirements.txt  run-fineweb-10min.sh  rwkv7_train_simplified.py  train.py
artifacts/: final_model_best_no_loop_no_value_kv2_qknorm_rope16_20260425.int8.ptz  final_model_best_recur2_seq512_mlp3_no_value_kv2_qknorm_rope16_20260425.int8.ptz  final_model_core1_recur4_bptt2_no_value_kv2_qknorm_rope16_20260425_rerun.int8.ptz  final_model_recur3_bptt1_no_value_kv2_qknorm_rope16_20260425.int8.ptz
data/: README.md  download_hf_docs_and_tokenize.py  lossless_caps.py  manifest.json  prepare_caseops_data.py  tokenizer_specs.json
data_sp1892/: manifest.json  tokenizer_config.export.json
docs/: autokernel_parcae.md  dynamic_swa.md  frozen_qk.md
models/: _norms.py  embeddings.py  encoder.py  layer_model.py  llm_jepa.py  predictor.py  tower.py
runs/: latest_muon_backend_sweep_path.txt  latest_parallel_residual_run_path.txt
scripts/: autokernel_parcae_adapter.py  bench_fused_leaky_relu_sq_mlp.py  bench_fused_qkv_postprocess.py  bench_liger_mhc.py  bench_liger_rope.py  bench_liger_softmax.py  eval_saved_parcae.py  git_autopush_5h.sh  hedgehog_fineweb_smoke.py  launch_caseops_8h100.sh  normalize_autokernel_profile.py  parcae_retrieval_diagnostic.py  probe_grouped_artifact.py  probe_rans_int6.py  run_autokernel_parcae.sh  run_parcae_scylla_current_best.sh
(+37150 files in other folders)
