[project]
name = "parameter-golf"
version = "0.1.0"
description = "Parameter-golf challenge training stack"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch==2.11.0; sys_platform == 'linux'",
  "huggingface-hub",
  "typing-extensions==4.15.0",
  "datasets",
  "sentencepiece",
]

[project.optional-dependencies]
record = ["tqdm", "kernels"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
