[project]
name = "parameter-golf"
version = "0.1.0"
description = "Parameter-golf challenge training stack"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch>=2.11.0; sys_platform == 'linux'",
  "huggingface-hub",
  "typing-extensions==4.15.0",
  "datasets",
  "sentencepiece",
  "setuptools>=80,<82",
  "torchao",
]

[project.optional-dependencies]
flash = ["flash-attn-4==4.0.0b9", "quack-kernels==0.3.10"]
record = ["tqdm", "kernels"]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
